ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audio-app-ingress
  labels:
    name: audio-app-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kube.nostrclient.social
      secretName: tls-certificate
  rules:
    - host: kube.nostrclient.social
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-service-service
                port:
                  number: 8000
